--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -894,7 +894,7 @@ s2 = s; // 赋值运算符操作
 
 ### STL基本介绍
 
-##### 介绍一下STL 提供六大组件
+##### 1.介绍一下STL 提供六大组件
 
 **1、容器（containers）**：各种数据结构，如vector, list, deque, set, map。从实现角度看，容器是一种 class template。
 
@@ -983,7 +983,7 @@ cout << cstr1 << " " << cstr2<< endl;//OK OK
 
 ---
 
-##### string 的搜索操作：
+##### 4. string 的搜索操作：
 
 + `s.find(args)` ：查找 s 中args第一次出现的位置
 +  `s.rfind(args)` ：查找 s 中args最后一次出现的位置
@@ -1000,7 +1000,7 @@ cout << cstr1 << " " << cstr2<< endl;//OK OK
 
 ### Array
 
-##### 介绍一下Array
+##### 1. 介绍一下Array
 
 + `std::array` 是封装固定大小数组的容器。底层为静态数组，大小固定，不可扩容，但操作更安全。
 + 结合了 C 风格数组的性能、可访问性与容器的优点，比如可获取大小、支持赋值、随机访问迭代器等。
@@ -1077,14 +1077,14 @@ vector采用的`内存扩张策略`一般是：在每次需要分配新空间时
 
 ---
 
-##### vector的迭代器类型与数据成员
+##### 4. vector的迭代器类型与数据成员
 
 + 迭代器类型： `Random Access Iterator` 
 + 数据成员：三个迭代器(指针) `first,last,end`
 
 ---
 
-##### Vector 上常见操作的复杂度（效率）
+##### 5. vector 上常见操作的复杂度（效率）
 
 - 随机访问——常数 *O(1)*
 - 在结尾或起始插入或移除元素——常数 *O(1)*
@@ -1094,27 +1094,27 @@ vector采用的`内存扩张策略`一般是：在每次需要分配新空间时
 
 ### deque
 
-##### 介绍一下 deque
+##### 1. 介绍一下 deque
 
 + `std::deque` （ double-ended queue ，双端队列）是有下标顺序容器，它允许在其首尾两段快速插入及删除。另外，在 deque 任一端插入或删除不会非法化指向其余元素的指针或引用。
 
 ---
 
-##### 与vector比有什么优势
+##### 2. 与vector比有什么优势
 
 + 与 `std::vector` 相反， deque 的元素不是相接存储的：典型实现用单独分配的固定大小数组的序列，外加额外的登记，这表示下标访问必须进行二次指针解引用，与之相比 vector 的下标访问只进行一次。
 + deque 的存储按需自动扩展及收缩。扩张 deque 比扩张vector更优，因为它不涉及到复制既存元素到新内存位置。
 
 ---
 
-##### deque的迭代器类型与数据成员：
+##### 3. deque的迭代器类型与数据成员：
 
 + 迭代器类型： `Random Access Iterator`
 + 数据成员：一个迭代器，内部拥有四个指针 `head, tail, cur, node`
 
 ---
 
-##### deque 上常见操作的复杂度（效率）
+##### 4. deque 上常见操作的复杂度（效率）
 
 - 随机访问——常数 *O(1)*
 - 在结尾或起始插入或移除元素——常数 *O(1)*
@@ -1124,7 +1124,7 @@ vector采用的`内存扩张策略`一般是：在每次需要分配新空间时
 
 ### forward_list
 
-##### 介绍一下 forward_list
+##### 1. 介绍一下 forward_list
 
 + `std::forward_list` 是支持从容器中的任何位置快速插入和移除元素的容器。不支持快速随机访问。它实现为单链表，且实质上与其在 C 中实现相比无任何开销。
 + 与 `std::list` 相比，此容器在不需要双向迭代时提供更有效地利用空间的存储。
@@ -1133,7 +1133,7 @@ vector采用的`内存扩张策略`一般是：在每次需要分配新空间时
 
 ---
 
-##### forward_list 操作
+##### 2. forward_list 操作
 
 ```c++
 lst.insert_after(p,...);//p为迭代器
@@ -1148,14 +1148,14 @@ lst.erase_after(b,e);		//删除 [b,e) 之间的元素
 
 ---
 
-##### forward_list的迭代器类型与数据成员：
+##### 3. forward_list的迭代器类型与数据成员：
 
 + 迭代器类型： `Forward Iterator` ，不支持 -- 操作，其余都支持
 + 数据成员：一个指针 `head` ,表示头结点
 
 ---
 
-##### forward_list 上常见操作的复杂度（效率）
+##### 4. forward_list 上常见操作的复杂度（效率）
 
 - 插入或移除元素——常数 *O(1)*
 - 查询操作——线性 *O(n)*
@@ -1164,34 +1164,202 @@ lst.erase_after(b,e);		//删除 [b,e) 之间的元素
 
 ### list
 
-##### 介绍一下list
+##### 1. 介绍一下list
 
 + `std::list` 是支持常数时间从容器任何位置插入和移除元素的容器。不支持快速随机访问。它通常实现为双向链表。与 `std::forward_list` 相比，此容器提供双向迭代但在空间上效率稍低。
 + 在 list 内或在数个 list 间添加、移除和移动元素不会非法化迭代器或引用。迭代器仅在对应元素被删除时非法化。
 
 ---
 
-##### list的迭代器类型与数据成员：
+##### 2. list的迭代器类型与数据成员：
 
 + 迭代器类型： `Bidirectional Iterator` ，支持 -- 操作
 + 数据成员：一个尾指针 `node` ,实现环状链表
 
 ---
 
-##### list 上常见操作的复杂度（效率）
+##### 3. list 上常见操作的复杂度（效率）
 
 - 插入或移除元素——常数 *O(1)*
 - 查询操作——线性 *O(n)* 
 
 ---
 
+### 关联容器
+
+实现在C++中，set 和 map 分别提供了以下三种数据结构，其底层实现以及优劣如下表所示：
+
+| 集合                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率   | 增删效率   |
+| -------------------- | -------- | -------- | ---------------- | ------------ | ---------- | ---------- |
+| `std::set`           | 红黑树   | 有序     | 否               | 否           | $O(log_n)$ | $O(log_n)$ |
+| `std::multiset`      | 红黑树   | 有序     | 是               | 否           | $O(log_n)$ | $O(log_n)$ |
+| `std::unordered_set` | 哈希表   | 无序     | 否               | 否           | $O(1)$     | $O(1)$     |
+
+`std::unordered_set`底层实现为哈希表，`std::set` 和`std::multiset` 的底层实现是红黑树， **红黑树是一种平衡二叉搜索树，所以key值是有序的，但key不可以修改，改动key值会导致整棵树的错乱，所以只能删除和增加。**
+
+| 映射                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率   | 增删效率   |
+| -------------------- | -------- | -------- | ---------------- | ------------ | ---------- | ---------- |
+| `std::map`           | 红黑树   | Key有序  | key不可重复      | key不可修改  | $O(log_n)$ | $O(log_n)$ |
+| `std::multimap`      | 红黑树   | Key有序  | key可重复        | key不可修改  | $O(log_n)$ | $O(log_n)$ |
+| `std::unordered_map` | 哈希表   | Key无序  | key不可重复      | key不可修改  | $O(1)$     | $O(1)$     |
+
+`std::unordered_map` 底层实现为哈希表，`std::map` 和`std::multimap` 的底层实现是红黑树。同理，`std::map` 和`std::multimap` 的key也是有序的（这个问题也经常作为面试题，考察对语言容器底层的理解）。
+
+当我们要使用集合来解决哈希问题的时候，优先使用unordered_set，因为它的查询和增删效率是最优的，如果需要集合是有序的，那么就用set，如果要求不仅有序还要有重复数据的话，那么就用multiset。
+
+##### 1.红黑树基础介绍
+
++ 红黑树是一种二叉查找树，但在每个结点上增加一个存储位表示结点的颜色，可以是 Red或 Black。 通过对任何一条从根到叶子的路径上各个结点着色方式的限制，确保没有一条路径会比其他路径长出两倍，因而是接近平衡的。
++ 红黑树在二叉查找树的基础上增加了着色和相关的性质使得红黑树相对平衡，保证了一棵 n 个结点的红黑树始终保持了 Iogn 的高度，从而保证了红黑树的查找 、 插入、删除的时间复杂度最坏为 O(logn)。性质如下：
+  + 每个结点要么是红的要么是黑的
+  + 根结点是黑的
+  + 每个叶结点都是黑的
+  + 如果一个结点是红的，那么它的两个儿子都是黑的
+  + 对于任意结点而言，从一个节点到该节点的子孙节点的所有路径上包含相同数目的黑节点。
++ 对红黑树进行插入和删除等操作时，可能会破坏红黑树的性质 。 可以通过对结点进行重新着色，以及对树进行相关的旋转操作，修改树中某些结点的颜色及指针结构，来达到操作后继续保持性质或平衡的目的 。
+
+##### 2.哈希表
+
++ 哈希表是根据关键码的值而直接进行访问的数据结构。数组就是一张哈希表。 关键码是数组的索引下表，通过下表直接访问数组中的元素。
++ 一般哈希表都是用来快速判断一个元素是否出现集合里。
++ 哈希函数，把值直接映射到哈希表上的索引，通过查询索引快速知道值是否在表中。
+
++  **<font color = red>此时为了保证映射出来的索引数值都落在哈希表上，再次对数值做一个取模的操作，保证值可以映射到哈希表上了。</font>** 如果元素数量大于哈希表的大小，会有元素同时映射到同一个索引下表的位置。出现 **「哈希碰撞」**。
+
+解决哈希碰撞的方法：
+
++ 拉链法：
+  + 位置发生了冲突，发生冲突的元素都被存储在链表中。
+  + 拉链法就是要选择适当的哈希表的大小，数组空值会浪费大量内存，链表太长会在查找上浪费太多时间。
++ 线性探测法：
+  + 使用线性探测法，一定要保证tableSize大于dataSize。依靠哈希表中的空位来解决碰撞问题。
+  + 例如冲突的位置，放了A，那么就向下找一个空位放置B的信息。所以要求tableSize一定要大于dataSize ，要不然哈希表上就没有空置的位置来存放冲突的数据了。
+
+---
+
 ### map
 
+##### 1. map的本质与功能
 
++ `std::map` 是有序键值对容器，它的元素的键是唯一的。对于迭代器来说，不可以修改键值，只 能修改其对应的实值。 
++ map 通常实现为红黑树。具有对数据自动排序的功能，在 map 内部所有的数据都是有序的 。
+
+##### 2. map的增删改查
+
++  **map类型值：**
+  +  `key_type`：关键字类型
+  + `mapped_type`：值类型
+  + `value_type`是key-value对pair类型
+
++  **map的插入**
+
+  + 插入 pair 数据：`map.insert(pair<type,type>(,))`
+  + 插入 value_type 数据： `map.insert(map<type,type>::value_type(,))`
+  + 数组的方式插入数据： `map[key_type] = mapped_type` ；可以覆盖修改原有数据
+
++  **map 的遍历**
+
+  + auto 的方式来遍历
+
+  + 利用迭代器：
+
+    ```c++
+    map<int , string>::iterator iter ;
+    for(iter = Map.begin();iter ! = Map.end(); iter++)
+      	cout << iter->first<< " " << iter->second << endl;
+    ```
+
++  **map的查找**
+
+  + 利用 count
+  + 利用 find 
+    + 数据出现时，返回数据所在位置的迭代器
+    + 没有要查找的数据，返回 end() 迭代器 。
+
++  **map的删除**
+
+  + 利用键值：`map.erase(k)` 返回 size_type类型的值以表示删除的元素个数
+  + 利用迭代器：`map.erase(p)` 返回 void类型
+  + 利用迭代器范围：`map.erase(b,e)` 返回 void类型 ；删除范围：[b,e)
+
+  > 注意事项：利用迭代器删除时最好还是将输入的迭代器备份一下
+
+##### 3. map排序
+
++ 按照 key 从大到小排序：
+  + 定义时排序： `map<string, int, greater<string>> Map`
+  + 利用vector：将map以pair对的形式导入vector，然后利用sort进行排序
+    + `sort(v.begin(), v.end(),[](pair<int,string>a,pair<int,string>b){return a.first > b.first;});`
++ key(第一个元素)是一个结构体：在结构体中重载 < 运算符
++ 按照 value 进行排序： 
+  + 利用 vector，将 first 修改成 second
+
+---
+
+##### 4. map的迭代器类型与数据成员：
+
++ 迭代器类型： `Bidirectional Iterator` 
++ 数据成员：一个指针指向红黑树；红黑树成员：一个size_t变量表示树的大小，一个header指针
+
+---
+
+##### 5. map 上常见操作的复杂度（效率）
+
+- 搜索，移除和插入： $logn$
 
 ### set
 
+##### 1.set的本质与功能
 
+`std::set` 是关联容器，含有 `Key` 类型对象的已排序集。用比较函数 Compare 进行排序。搜索、移除和插入拥有对数复杂度。 `set` 通常以红黑树实现。
+
+---
+
+##### 2.为何 map 和 set 的插入删除效率比用其他序列容器高 ?
+
++ 因为关联容器不需要做内存拷贝和内存移动 。 set容器内所有元素都是以节点的方式来存储，节点结构和链表差不多
++ 插入只要把节点的指针指向新的节点；删除把指向删除节点的指针指向其他节点。 只需修改指针操作，和内存移动没有关系 。
+
+---
+
+##### 3.为何每次 insert之后，以前保存的 iterator不会 失效?
+
++ iterator相当于指向节点的指针，内存没有变，指向内存的指针不会失效。 
++ 对于vector，每一次删除和插入，指针都有可能失效，push_back也是如此 。 因为有时需要开辟新内存将原有数据移动入内，这样原指针全部失效。
+
+---
+
+##### 4.当数据元素增多时， set 的插入和搜索速度变化如何?
+
++ set使用的是二分查找，当数据量增大一倍的时候，搜索次数只不过多了 1 次。是$log2$的关系。
+
+---
+
+##### 5.set的增删查操作
+
++ set的插入操作
+  + 在 pos位置之前插入 value，返回新元素位置
+  + 将迭代区间[&first, &last)内所有的元素 ，插入到 set容器。
++ set的删除操作
+  + `size_type erase(value)`移除 set容器内元素值为 value 的所有元素，返回移除的元素个数。
+  + `void erase(&pos)`移除 pos位置上的元素，无返回值。
+  + `void erase(&first, &last)`移除迭代区间``[&first, &last)``内的元素，无返回值 。
++ set的查找
+  + `count(value)`返回 set对象内元素值为 value 的元素个数 。
+  + `iterator find(value)`返回 value所在位置，找不到 value将返回 end()。
+
+---
+
+##### 6. set的迭代器类型与数据成员：
+
++ 迭代器类型： `Bidirectional Iterator` 
++ 数据成员：一个指针指向红黑树；红黑树成员：一个size_t变量表示树的大小，一个header指针
+
+---
+
+##### 7. set 上常见操作的复杂度（效率）
+
+- 搜索，移除和插入： $logn$
 
 ### unordered_map 与 unordered_set
 
@@ -1216,15 +1384,7 @@ lst.erase_after(b,e);		//删除 [b,e) 之间的元素
 
 - 插入，移除以及查询元素——常数 *O(1)*
 
-  
-
-
-
-
-
-
-
-
+---
 
 ### 容器适配器
 
